fix show all countries button. and refactor some code blocks for readability

--- a/country_info/style.css
+++ b/country_info/style.css
@@ -69,11 +69,16 @@ ul {
     flex-direction: row;
 }
 
-.region_select h2 {
+.region_select_button {
     flex: 1;
     border: 1px solid black;
     text-align: center;
     padding: 0.5rem;
+    cursor: pointer;
+}
+
+.region_select_button:hover {
+    filter: drop-shadow(0px 0px 2px #3E92CC);
 }
 
 .flagContainer {
